[workspace]
members = ["*/src/.."]

resolver = "3"

[workspace.package]
edition = "2024"
authors = ["The Dev Nolus Team <dev@nolus.io>"]
license = "Apache-2.0"
rust-version = "1.94"

### [SYNC WITH OTHER WORKSPACES : START]
[workspace.lints.clippy]
all = "deny"
large_enum_variant = { level = "allow", priority = 1 }
unwrap_in_result = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
deprecated_safe = "forbid"
future-incompatible = { level = "deny", priority = 1 }
keyword-idents = { level = "deny", priority = 1 }
nonstandard-style = { level = "deny", priority = 1 }
refining-impl-trait = { level = "deny", priority = 1 }
rust-2018-idioms = { level = "deny", priority = 1 }
unexpected_cfgs = { level = "forbid", priority = 1, check-cfg = ["cfg(test)"] }
unfulfilled_lint_expectations = { level = "forbid", priority = 1 }
unused = "deny"
warnings = "deny"
### [SYNC WITH OTHER WORKSPACES : END]

[workspace.dependencies]
# Own packages
json-value = { path = "json-value", default-features = false }
topology = { path = "topology", default-features = false }

# General packages
anyhow = { version = "1", default-features = false, features = ["std"] }
cargo_metadata = { version = "0.20", default-features = false }
clap = { version = "4.5", default-features = false, features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "unicode",
    "usage",
] }
either = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
sha2 = { version = "0.10.8", default-features = false }

# Testing packages
serde_test = { version = "1", default-features = false }

[profile.dev.build-override]
opt-level = 3

[profile.ci_dev]
inherits = "dev"
debug = false
incremental = false
panic = "abort"

[profile.ci_dev_no_debug_assertions]
inherits = "ci_dev"
debug-assertions = false

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
