[package]
name = "rewards_dispatcher"
version = "0.1.0"
authors = ["Nina Nikolova <n.nikolova@nolus.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cosmwasm-bindings"]
cosmwasm-bindings = ["cosmwasm"]
cosmwasm = []

[dependencies]
time-oracle = { path = "../../packages/time-oracle", version = "0.1.0", default-features = false}
lpp = { path = "../lpp", version = "0.1.0", default-features = false}
oracle = { path = "../oracle", version = "0.1.0", default-features = false}
treasury = { path = "../treasury", version = "0.1.0", default-features = false}
finance = { path = "../../packages/finance", version = "0.1.0", default-features = false }


cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.2"
anyhow = "1.0.57"

treasury = { path = "../treasury", version = "0.1.0", default-features = false, features = ["cosmwasm"]}
lease = { path = "../lease", version = "0.1.0", default-features = false, features = ["cosmwasm"]}
lpp = { path = "../lpp", version = "0.1.0", default-features = false, features = ["cosmwasm"]}
oracle = { path = "../oracle", version = "0.1.0", default-features = false, features = ["cosmwasm"]}
marketprice = { path = "../../packages/marketprice", version = "0.1.0", default-features = false}
