[package]
name = "lease"
version = "0.1.0"
authors = ["Nikola Terziev <n.terziev@nolus.io>", "Gancho Manev <g.manev@nolus.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "schema"
test = true

[features]
default = ["cosmwasm-bindings"]
cosmwasm-bindings = ["cosmwasm"]
cosmwasm = []

[dependencies]
cosmwasm-std = { version = "1.0.0", default-features = false, features = ["abort"] }
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
time_alarms = { path = "../timealarms", package = "timealarms", version = "0.1.0", default-features = false }
lpp = { path = "../lpp", version = "0.1.0", default-features = false }
market_price_oracle = { path = "../oracle", package = "oracle", version = "0.1.0", default-features = false }
finance = { path = "../../packages/finance", version = "0.1.0", default-features = false }
platform = { path = "../../packages/platform", version = "0.1.0", default-features = false }
marketprice = { path = "../../packages/marketprice", version = "0.1.0", default-features = false }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
time_alarms = { path = "../timealarms", package = "timealarms", version = "0.1.0", default-features = false, features = ["testing"] }
lpp = { path = "../lpp", version = "0.1.0", default-features = false, features = ["testing"] }
platform = { path = "../../packages/platform", version = "0.1.0", default-features = false, features = ["testing"] }
market_price_oracle = { path = "../oracle", package = "oracle", version = "0.1.0", default-features = false, features = ["testing"] }
