[package]
name = "lease"
version = "0.1.0"
authors = ["Nikola Terziev <n.terziev@nolus.io>", "Gancho Manev <g.manev@nolus.io>"]
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "schema"
test = true

[features]
default = ["contract-with-bindings"]
contract-with-bindings = ["contract"]
contract = []

[dependencies]
lpp = { path = "../lpp", default-features = false, features = ["stub"] }
market_price_oracle = { path = "../oracle", package = "oracle", default-features = false, features = ["stub", "convert"] }
profit = { path = "../profit", default-features = false, features = ["stub"] }
time_alarms = { path = "../timealarms", package = "timealarms", default-features = false, features = ["stub"] }
currency = { path = "../../packages/currency" }
finance = { path = "../../packages/finance" }
marketprice = { path = "../../packages/marketprice" }
platform = { path = "../../packages/platform" }
sdk = { path = "../../packages/sdk", features = ["contract"] }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true }

enum_dispatch = "0.3.8"
thiserror = "1"
serde = { version = "1", default-features = false, features = ["derive"] }

[dev-dependencies]
time_alarms = { path = "../timealarms", package = "timealarms", default-features = false, features = ["testing"] }
lpp = { path = "../lpp", default-features = false, features = ["testing"] }
profit = { path = "../profit", default-features = false, features = ["testing"] }
market_price_oracle = { path = "../oracle", package = "oracle", default-features = false, features = ["testing"] }
finance = { path = "../../packages/finance", features = ["testing"] }
platform = { path = "../../packages/platform", features = ["testing"] }
schema = { path = "../../packages/schema" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sdk = { path = "../../packages/sdk", features = ["testing"] }
