[package]
name = "lease"
version = "0.8.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["contract-with-bindings", "migration"]
contract-with-bindings = ["contract"]
contract = []
migration = ["timealarms/testing", "dex/migration", "lpp/migration"]
testing = ["currency/testing", "finance/testing"]

[dependencies]
access-control = { workspace = true }
lpp = { workspace = true, features = ["stub"] }
oracle = { workspace = true, features = ["convert"] }
profit = { workspace = true, features = ["stub"] }
timealarms = { workspace = true, features = ["stub"] }

currency = { workspace = true }
dex = { workspace = true }
finance = { workspace = true }
marketprice = { workspace = true }
platform = { workspace = true }
swap = { workspace = true, features = ["trx"] }
sdk = { workspace = true, features = ["contract"] }
versioning = { workspace = true }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true }

enum_dispatch = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
timealarms = { workspace = true, features = ["testing"] }
lpp = { workspace = true, features = ["testing"] }
profit = { workspace = true, features = ["testing"] }
oracle = { workspace = true, features = ["testing"] }
finance = { workspace = true, features = ["testing"] }
currency = { workspace = true, features = ["testing"] }
marketprice = { workspace = true, features = ["testing"] }
platform = { workspace = true, features = ["testing"] }
schema = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sdk = { workspace = true, features = ["testing"] }
