[package]
name = "leaser"
version = "0.1.0"
authors = ["Nikola Terziev <n.terziev@nolus.io>", "Gancho Manev <g.manev@nolus.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["contract-with-bindings"]
contract-with-bindings = ["contract"]
contract = []

[dependencies]
lease = { path = "../lease", default-features = false }
lpp = { path = "../lpp", default-features = false }
finance = { path = "../../packages/finance" }
platform = { path = "../../packages/platform" }
sdk = { path = "../../packages/sdk", features = ["contract"] }

# Required as a dependency by `entry_point` attribute macro
# Version will be selected by `sdk` package
# TODO/Rust-1.64 remove in favour of workspace inheritance
#  cosmwasm-std = { workspace = true }
cosmwasm-std = { version = "1", default-features = false }

thiserror = "1.0.37"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }

[dev-dependencies]
finance = { path = "../../packages/finance", features = ["testing"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sdk = { path = "../../packages/sdk", features = ["testing"] }
