[package]
name = "leaser"
version = "0.1.0"
authors = ["Nikola Terziev <n.terziev@nolus.io>", "Gancho Manev <g.manev@nolus.io>"]
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["contract-with-bindings"]
contract-with-bindings = ["contract"]
contract = []

[dependencies]
lease = { path = "../lease", default-features = false }
lpp = { path = "../lpp", default-features = false }
oracle = { path = "../oracle", default-features = false, features = ["stub"] }
currency = { path = "../../packages/currency" }
finance = { path = "../../packages/finance" }
platform = { path = "../../packages/platform" }
sdk = { path = "../../packages/sdk", features = ["contract"] }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true }

thiserror = "1"
serde = { version = "1", default-features = false, features = ["derive"] }

[dev-dependencies]
finance = { path = "../../packages/finance", features = ["testing"] }
schema = { path = "../../packages/schema" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sdk = { path = "../../packages/sdk", features = ["testing"] }
