[package]
name = "lpp"
version = "0.1.0"
authors = ["v.kolesnikov <v.kolesnikov@nolus.io>"]
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "schema"

[features]
default = ["contract-with-bindings"]
contract-with-bindings = ["contract"]
contract = ["stub"]
stub = []
testing = []

[dependencies]
currency = { path = "../../packages/currency" }
finance = { path = "../../packages/finance" }
platform = { path = "../../packages/platform" }
sdk = { path = "../../packages/sdk", features = ["contract"] }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
currency = { path = "../../packages/currency", features = ["testing"] }
finance = { path = "../../packages/finance", features = ["testing"] }
platform = { path = "../../packages/platform", features = ["testing"] }
schema = { path = "../../packages/schema" }
