[package]
name = "lpp"
version = "0.1.1"
authors = ["The Dev Nolus Team <dev@nolus.io>"]
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "schema"

[features]
default = ["contract-with-bindings"]
contract-with-bindings = ["contract"]
contract = ["stub"]
stub = []
testing = []

[dependencies]
access-control = { workspace = true }
currency = { workspace = true }
finance = { workspace = true }
platform = { workspace = true }
sdk = { workspace = true, features = ["contract"] }
versioning = { workspace = true }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
access-control = { workspace = true }
currency = { workspace = true, features = ["testing"] }
finance = { workspace = true, features = ["testing"] }
platform = { workspace = true, features = ["testing"] }
schema = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
serde_json = "1"
