[package]
name = "oracle"
version = "0.1.0"
authors = ["Nina Nikolova <n.nikolova@nolus.io>"]
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["contract-with-bindings"]
contract-with-bindings = ["contract"]
contract = ["stub", "convert"]
convert = ["stub"]
testing = ["stub"]
stub = []

[dependencies]
currency = { path = "../../packages/currency" }
finance = { path = "../../packages/finance" }
swap = { path = "../../packages/swap" }
marketprice = { path = "../../packages/marketprice" }
platform = { path = "../../packages/platform" }
sdk = { path = "../../packages/sdk", features = ["contract"] }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true }

thiserror = { workspace = true }
trees = "0.4.2"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
currency = { path = "../../packages/currency", features = ["testing"] }
finance = { path = "../../packages/finance", features = ["testing"] }
schema = { path = "../../packages/schema" }
marketprice = { path = "../../packages/marketprice", features = ["testing"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sdk = { path = "../../packages/sdk", default-features = false, features = ["testing"] }
