[package]
name = "oracle"
version = "0.1.0"
authors = ["Nina Nikolova <n.nikolova@nolus.io>"]
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["contract-with-bindings"]
contract-with-bindings = ["contract"]
contract = ["stub", "convert"]
convert = ["stub"]
testing = ["stub"]
stub = []

[dependencies]
access-control = { workspace = true }
currency = { workspace = true }
finance = { workspace = true }
marketprice = { workspace = true }
platform = { workspace = true }
sdk = { workspace = true, features = ["contract"] }
swap = { workspace = true }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true }

thiserror = { workspace = true }
trees = "0.4.2"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
currency = { workspace = true, features = ["testing"] }
finance = { workspace = true, features = ["testing"] }
schema = { workspace = true }
marketprice = { workspace = true, features = ["testing"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sdk = { workspace = true, features = ["testing"] }
