[package]
name = "oracle"
version = "0.4.4"
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "oracle_schema"
test = true

[features]
default = ["contract-with-bindings"]
contract-with-bindings = ["contract"]
contract = ["stub", "convert"]
convert = ["stub"]
testing = ["stub"]
stub = []

[dependencies]
access-control = { workspace = true }
currency = { workspace = true }
finance = { workspace = true }
marketprice = { workspace = true }
platform = { workspace = true }
sdk = { workspace = true, features = ["contract"] }
swap = { workspace = true }
tree = { workspace = true, features = ["schema"] }
versioning = { workspace = true, features = ["schema"] }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
currency = { workspace = true, features = ["testing"] }
finance = { workspace = true, features = ["testing"] }
platform = { workspace = true, features = ["testing"] }
schema = { workspace = true }
marketprice = { workspace = true, features = ["testing"] }
tree = { workspace = true, features = ["schema", "testing"] }

serde-json-wasm = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sdk = { workspace = true, features = ["testing"] }
