[package]
name = "profit"
version = "0.1.0"
authors = ["Nina Nikolova <n.nikolova@nolus.io>"]
edition.workspace = true
license.workspace = true

resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["contract-with-bindings"]
contract-with-bindings = ["contract"]
contract = ["stub"]
stub = []
testing = []

[dependencies]
timealarms = { path = "../timealarms", default-features = false }
currency = { path = "../../packages/currency" }
finance = { path = "../../packages/finance" }
platform = { path = "../../packages/platform" }
sdk = { path = "../../packages/sdk", features = ["contract"] }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
finance = { path = "../../packages/finance", features = ["testing"] }
schema = { path = "../../packages/schema" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sdk = { path = "../../packages/sdk", default-features = false, features = ["testing"] }
