[package]
name = "profit"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "profit_schema"
test = true

[features]
default = ["contract-with-bindings"]
contract-with-bindings = ["contract"]
contract = ["stub"]
stub = []
testing = []

[dependencies]
access-control = { workspace = true }
currency = { workspace = true }
dex = { workspace = true }
finance = { workspace = true }
oracle = { workspace = true }
platform = { workspace = true }
sdk = { workspace = true, features = ["contract"] }
timealarms = { workspace = true, features = ["stub"]}
versioning = { workspace = true }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
finance = { workspace = true, features = ["testing"] }
schema = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sdk = { workspace = true, features = ["testing"] }
