[package]
name = "timealarms"
version = "0.1.0"
authors = ["Nina Nikolova <n.nikolova@nolus.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cosmwasm-bindings"]
cosmwasm-bindings = ["cosmwasm"]
cosmwasm = []
testing = []

[dependencies]
platform = { path = "../../packages/platform", version = "0.1.0", default-features = false}
finance = { path = "../../packages/finance", version = "0.1.0", default-features = false}
currency = { path = "../../packages/currency", version = "0.1.0", default-features = false}
time-oracle = { path = "../../packages/time-oracle", version = "0.1.0"}

cosmwasm-std = { version = "1.0.0", default-features = false, features = ["abort"] }
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.0"
