[package]
name = "timealarms"
version = "0.1.0"
authors = ["Nina Nikolova <n.nikolova@nolus.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["contract-with-bindings"]
contract-with-bindings = ["contract"]
contract = ["stub"]
stub = []
testing = []

[dependencies]
currency = { path = "../../packages/currency" }
finance = { path = "../../packages/finance" }
platform = { path = "../../packages/platform" }
sdk = { path = "../../packages/sdk", features = ["contract"] }
time-oracle = { path = "../../packages/time-oracle" }

# Required as a dependency by `entry_point` attribute macro
# Version will be selected by `sdk` package
# TODO/Rust-1.64 remove in favour of workspace inheritance
#  cosmwasm-std = { workspace = true }
cosmwasm-std = { version = "1", default-features = false }

serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.37"

[dev-dependencies]
platform = { path = "../../packages/platform", features = ["testing"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sdk = { path = "../../packages/sdk", default-features = false, features = ["cosmos", "storage", "testing"] }
