[package]
name = "timealarms"
version = "0.2.0"
authors = ["The Dev Nolus Team <dev@nolus.io>"]
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["contract-with-bindings"]
contract-with-bindings = ["contract"]
contract = ["stub"]
stub = []
testing = []

[dependencies]
currency = { workspace = true }
finance = { workspace = true }
platform = { workspace = true }
sdk = { workspace = true, features = ["contract"] }
time-oracle = { workspace = true }
versioning = { workspace = true }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
platform = { workspace = true, features = ["testing"] }
schema = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sdk = { workspace = true, features = ["cosmos", "storage", "testing"] }
