[package]
name = "treasury"
version = "0.1.0"
authors = ["Veselin Vlasakiev <v.vlasakiev@nolus.io>"]
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["contract-with-bindings"]
contract-with-bindings = ["contract"]
contract = []

[dependencies]
lpp = { path = "../lpp", default-features = false }
currency = { path = "../../packages/currency" }
finance = { path = "../../packages/finance" }
platform = { path = "../../packages/platform", features = ["access-control"] }
sdk = { path = "../../packages/sdk", features = ["contract"] }

cw-controllers = { workspace = true }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
semver = "1"

[dev-dependencies]
schema = { path = "../../packages/schema" }
