lints = { workspace = true }

[package]
name = "protocol_tests"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["ci", "@agnostic"], include-rest = true },
]

[dependencies]
currencies = { workspace = true }
oracle = { workspace = true, features = ["contract"] }
sdk = { workspace = true, features = ["testing"] }
