lints = { workspace = true }

[package]
name = "protocol_tests"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["ci", "@agnostic"], include-rest = false },
]

[[test]]
name = "oracle"
required-features = [ "oracle/contract", "sdk/testing" ]

[dependencies]
oracle = { workspace = true, optional = true }
sdk = { workspace = true, optional = true }

