[package]
name = "cargo-each"
version = "0.0.0"
edition = "2021"

[package.metadata.cargo-each]
combinations = [
    { tags = ["ci", "@agnostic"], include-rest = true }
]

[dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["env"] }
serde = { workspace = true }
