lints = { workspace = true }

[package]
name = "cargo-each"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["ci", "@agnostic"], include-rest = true }
]

[dependencies]
anyhow = { workspace = true }
either = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["env"] }
serde = { workspace = true }
