[package]
name = "json-value"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
schema = ["dep:cosmwasm-schema"]

[dependencies]
# Own packages
cosmwasm-schema = { workspace = true, optional = true }

# General packages
serde = { workspace = true }

[lints]
workspace = true
