[package]
name = "json-value"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["ci", "@agnostic"], include-rest = true }
]

[dependencies]
# General packages
serde = { workspace = true }

[dev-dependencies]
# Own packages
either = { workspace = true }

# General packages
serde_json = { workspace = true }
serde_test = { workspace = true }

[lints]
workspace = true
