[package]
name = "nolus-config"
version = "0.1.0"
authors = ["Kiril Mihaylov <k.mihaylov@nolus.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.2", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.37"
