[package]
name = "nolus-config"
version = "0.1.0"
authors = ["Kiril Mihaylov <k.mihaylov@nolus.io>"]
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
