[package]
name = "nolus-config"
version = "0.1.0"
authors = ["Kiril Mihaylov <k.mihaylov@nolus.io>"]
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
heck = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.6"
thiserror = "1"
