lints = { workspace = true }

[package]
name = "topology"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["ci", "@agnostic"], include-rest = true }
]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
