[package]
name = "admin_contract"
version = "0.3.1"
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
contract = ["sdk/contract"]

[dependencies]
access-control = { workspace = true }
currency = { workspace = true }
finance = { workspace = true }
platform = { workspace = true }
sdk = { workspace = true }
versioning = { workspace = true }

serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
schema = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sdk = { workspace = true, default-features = false, features = ["testing"] }
