[package]
name = "admin_contract"
version = "0.3.2"
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["build", "@agnostic"], always-on = ["contract"], include-rest = false },
    { tags = ["ci", "@agnostic"], feature-groups = ["contract-or-migrate"], include-rest = true }
]
feature-groups = { contract-or-migrate = { members = ["contract", "migrate"], at-least-one = false, mutually-exclusive = true } }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
contract = ["dep:cosmwasm-std", "migrate"]
migrate = []

[dependencies]
access-control = { workspace = true }
currency = { workspace = true }
finance = { workspace = true }
platform = { workspace = true }
sdk = { workspace = true, features = ["contract", "cosmos"] }
versioning = { workspace = true }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true, optional = true }

serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
schema = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sdk = { workspace = true, default-features = false, features = ["testing"] }
