lints = { workspace = true }

[package]
name = "admin_contract"
version = "0.5.4"
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["build", "@agnostic"], always-on = ["contract"], include-rest = false },
    { tags = ["ci", "@agnostic"], include-rest = true },
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
contract = ["dep:cosmwasm-std"]

[dependencies]
access-control = { workspace = true }
currency = { workspace = true }
finance = { workspace = true }
platform = { workspace = true }
sdk = { workspace = true, features = ["contract"] }
versioning = { workspace = true }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true, optional = true }

serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
platform = { workspace = true, features = ["testing"] }

schema = { workspace = true }
serde_test = { workspace = true }
