[package]
name = "rewards_dispatcher"
version = "0.5.5"
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
admin_contract = { workspace = true }
lpp-platform = { workspace = true }
oracle-platform = { workspace = true, features = ["unchecked-base-currency"] }
timealarms = { workspace = true, features = ["stub"] }
treasury = { workspace = true }

access-control = { workspace = true }
currency = { workspace = true }
finance = { workspace = true }
platform = { workspace = true }
sdk = { workspace = true, features = ["contract"] }
versioning = { workspace = true }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true }

serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
currency = { workspace = true, features = ["testing"] }
lpp-platform = { workspace = true, features = ["testing"] }
oracle-platform = { workspace = true, features = ["testing"] }

schema = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sdk = { workspace = true, default-features = false, features = ["testing"] }
